# RK

./: CMakeList.txt  CMakeLists.txt
.github/workflows/: build.yaml
include/: strategy.h
src/: main.cpp  strategy.cpp
tests/: CMakeList.cmake  CMakeLists.txt  test_strategy.cpp
